--- a/src/css/_utility.scss
+++ b/src/css/_utility.scss
@@ -122,6 +122,21 @@ input[class^="btn-"]:hover {
     }
 }
 
+.mt {
+    &-1 {
+        margin-top: 1rem;
+    }
+    &-2 {
+        margin-top: 2rem;
+    }
+    &-3 {
+        margin-top: 3rem;
+    }
+    &-4 {
+        margin-top: 4rem;
+    }
+}
+
 .mx {
     &-1 {
         margin: 0 1rem;
